<resources>
    <string name="app_name">Эврика</string>
    <string name="chat">Чат</string>
    <string name="schedule">Расписание</string>
    <string name="menu_to_do">Список Дел</string>
    <string name="site">Сайт Школы</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="input_text">Введите текст</string>
    <string name="schedule_for">Расписание уроков на:</string>
    <string name="add_item">Добавьте пункт</string>
    <string name="home_work">На дом</string>
    <string name="eureka">Эврика</string>
    <string name="send_message_description">SendMessage</string>
    <string name="subject_name">Название предмета</string>
    <string name="homework">Домашнее задание</string>
    <string name="hint_of_home_work">Пункт домашнего задания</string>
    <string name="subject">Предмет</string>
    <string name="subject_main">Предмет:</string>
    <string name="work_main">Задание:</string>
    <string name="back_page_web_view">backPage</string>
    <string name="reload_page_web_view">reloadPage</string>
    <string name="forward_page_web_view">ForwardPage</string>
    <string name="to_do_remove_raw">removeRaw</string>
    <string name="to_do_add_item">AddItem</string>
    <string name="_1">1)</string>
    <string name="_2">2)</string>
    <string name="_3">3)</string>
    <string name="_4">4)</string>
    <string name="_5">5)</string>
    <string name="_6">6)</string>
    <string name="_7">7)</string>
    <string name="_8">8)</string>
    <string name="_9">9)</string>
    <string name="_10">10)</string>
</resources>