<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/subject"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changeHomeWorkSubjectD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/subject_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/homework"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changeHomeWorkDescriptionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_of_home_work" />

</LinearLayout>