<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/tuesday"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu1"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu2"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu3"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu4"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu5"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu6"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu7"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu8"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu9"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tu10"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>