<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/thursday"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th1"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th2"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th3"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th4"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th5"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th6"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th7"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th8"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th9"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/th10"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>