<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wednesday"
            android:layout_marginBottom="10dp"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/we1"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we2"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/we3"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we4"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we5"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we6"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we7"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we8"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we9"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                tools:ignore="LabelFor"
                android:id="@+id/we10"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>